<resources>
    <string name="app_name">WhatsApp</string>
    <string name="edUsername">Userame</string>
    <string name="edPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="edDisplayName">Display name</string>
    <string name="edPassword2">Re-enter password</string>
    <string name="edSignup">Sign up</string>
    <string name="edContactIdentifier">Contact\'s identifier</string>
    <string name="edContactDN">Contact\'s display name</string>
    <string name="edContactServer">Contact\'s server</string>
    <string name="btnAddContact">Add Contact</string>
    <string name="etTypeHere">type here...</string>
    <string name="tvSample">Name</string>
    <string name="toRegisterTxt">New here?\n Click here</string>
    <string name="loginTxt">Login</string>
    <string name="sign_upTxt">Sign Up</string>
    <string name="already_have_an_accountTxt">Already have an account?</string>
<!--    <string name="BaseUrl">http://10.0.2.2:5132/api/</string>-->
</resources>